data/derived/sp14/progs/unify/prog3017.ml.out
Characters 29-67:
  let fixpoint (f, b) = wwhile (fun ff b -> (f(b), f(b) = f(b-1)) ,b);;
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
